# wyoming-dotstts

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yml  constraints.txt  hacs.json  pyproject.toml  requirements.txt  server.py
custom_components/wyoming_dotstts/: __init__.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/wyoming_dotstts/frontend/: panel.js
custom_components/wyoming_dotstts/translations/: en.json  pl.json
dotstts_wyoming/: __init__.py  __main__.py  audio.py  handler.py  runtime_settings.py  server.py  speaker_store.py  synthesizer.py  text.py  wyoming_protocol.py
dotstts_wyoming/templates/: index.html
tests/: test_cli.py  test_handler.py  test_http_settings.py  test_http_voices.py  test_speaker_store.py  test_synthesizer.py  test_text.py
